Fixed all kat's comment
1. Add / and space to nric name field
2. Added years for spouse year options
3. Added . to all error message
4. remove scrollbar on tabs
5. added error message for contracting company

--- a/main.css
+++ b/main.css
@@ -143,6 +143,7 @@ input:checked + .tab-label::after {
 }
 input:checked ~ .tab-content.custom-tab-content {
   max-height: 100vh;
+  overflow-x: hidden;
   /* padding: 1em; */
 }
 
